--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
 
+
         <link rel="stylesheet" href="css/icon-font.css">
         <link rel="stylesheet" href="css/style.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
@@ -41,14 +42,14 @@
                             You are going to fall in love with nature
                         </h3>
                         <p class="paragraph">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus suscipit adipisci dolor dolorum non voluptas natus ratione, fuga quae quisquam dolores ipsum eligendi. Iusto accusamus ab a quam ad dolor.
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus suscipit adipisci dolor dolorum non voluptas natus ratione, fuga 
                         </p>
 
                         <h3 class="heading-tertiary u-margin-bottom-small">
                             Live adventures like you never had before
                         </h3>
                         <p class="paragraph">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit, sunt? Quasi ad excepturi delectus, sapiente quidem odit voluptatum cum libero cupiditate ducimus placeat amet vel, numquam dolores facilis molestias dignissimos?
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit, sunt? Quasi ad excepturi delectus, sapiente quidem odit voluptatum
                         </p>
 
                         <a href="#" class="btn-text">Learn more &rarr;</a>
@@ -60,6 +61,53 @@
                             <img src="img/nat-3-large.jpg" alt="photo-3" class="composition__photo composition__photo--p3">
                         </div>
                     </div>
+                </div>
+            </section>
+
+            <section class="section-features">
+
+
+                <div class="row">
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-world"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit, sunt? Quasi ad excepturi delectus, sapiente quidem odit voluptatum
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-compass"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Meet nature</h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit, sunt? Quasi ad excepturi delectus, sapiente quidem odit voluptatum
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-map"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Find your way</h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit, sunt? Quasi ad excepturi delectus, sapiente quidem odit voluptatum
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-heart"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">live a healthier life</h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit, sunt? Quasi ad excepturi delectus, sapiente quidem odit voluptatum
+                            </p>
+                        </div>
+                    </div>
+
                 </div>
             </section>
 
